# mpnn

./: .gitignore  Dockerfile  README.md  config.json  docker-compose.yml  environment.yml  pyproject.toml
.pytest-tmp/: test_bad_payload_jsoncurrent  test_chains_invalidcurrent  test_design_integration_mock_mcurrent  test_design_missing_required_mcurrent  test_design_rejects_bad_payloacurrent  test_design_rejects_chains_invcurrent  test_design_rejects_num_sequencurrent  test_design_returns_200_for_micurrent  test_missing_required_multiparcurrent  test_num_sequences_invalidcurrent  test_reject_when_busy_returns_current  test_valid_requestcurrent
.pytest-tmp/test_bad_payload_json0/: config.json
.pytest-tmp/test_chains_invalid0/: config.json
.pytest-tmp/test_design_integration_mock_m0/: config.json
.pytest-tmp/test_design_missing_required_m0/: config.json
.pytest-tmp/test_design_rejects_bad_payloa0/: config.json
.pytest-tmp/test_design_rejects_chains_inv0/: config.json
.pytest-tmp/test_design_rejects_num_sequen0/: config.json
.pytest-tmp/test_design_returns_200_for_mi0/: config.json
.pytest-tmp/test_missing_required_multipar0/: config.json
.pytest-tmp/test_num_sequences_invalid0/: config.json
.pytest-tmp/test_reject_when_busy_returns_0/: config.json
.pytest-tmp/test_valid_request0/: config.json
docker/: .dockerignore  Dockerfile
examples/: tiny_single_chain.cif  toy.cif
examples/requests/: design.curl.sh  health.curl.sh
mpnn_app/: api.py  dash_ui.py  fasta.py  jobs.py  mock_model.py  run.py  runner.py  schemas.py
mpnn_app/static/: index.html
requests/: README.md  design.curl.sh  health.curl.sh  payload.a.json  payload.ab.json  payload.b.json  payload.none.json
scripts/: client.py
src/mpnn/: __init__.py  api.py  cli.py  core.py  design.py  errors.py  io.py  schemas.py  ui.py
src/mpnn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mpnn_app/: dash_ui.py  fasta.py  jobs.py  run.py  runner.py  (+1 more)
tests/: conftest.py  test_api.py  test_design_api.py  test_design_busy_reject.py  test_design_integration_mock_model.py  test_design_validation.py
(+13 files in other folders)
