[project]
name = "mpnn"
version = "0.1.0"
description = "Minimal REST + UI wrapper around dauparas/ProteinMPNN"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "python-multipart>=0.0.9",
  "pydantic>=2.6",
  "biopython>=1.83",
  "numpy>=1.24",
]

[project.optional-dependencies]
# Needed to run the real ProteinMPNN inference (mock mode can skip this).
mpnn = [
  "torch>=2.1",
]
dev = [
  "pytest>=8",
  "httpx>=0.27",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "pydantic>=2.7",
  "gemmi>=0.6.6",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
