[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpnn"
version = "0.1.0"
description = "ProteinMPNN mini-service (REST + minimal UI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "python-multipart>=0.0.9",
  "pydantic>=2.6",
  "dash>=2.14",
  "requests>=2.31",
  "biopython>=1.83",
  "numpy>=1.24",
]

[project.optional-dependencies]
mpnn = [
  "torch>=2.1",
]

dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

